# gazetteer-entity-parser

./: .dinghy.toml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md  README.rst  update_version.sh
.github/workflows/: ci.yml
.targets/: target-ios-x86_64_main_mobile.yml  target-linux-arm-jessie_main_desktop.yml  target-linux-arm-stretch_desktop.yml  target-linux-x86-stretch_main_desktop.yml  target-macos_main_desktop.yml
benches/: bench_parser.rs  bench_resolver.rs  bench_resolver_artist_gaz.rs
examples/: entity_parsing_from_scratch.rs  interactive_parsing_cli.rs
src/: constants.rs  data.rs  errors.rs  lib.rs  macros.rs  parser.rs  parser_builder.rs  parser_registry.rs  resolver.rs  symbol_table.rs  utils.rs
