[package]
name = "gazetteer-entity-parser"
version = "0.7.2"
authors = ["Alaa Saade <alaa.saade@snips.ai>"]
repository = "https://github.com/snipsco/gazetteer-entity-parser"
description = "Gazetteer-based entity parser"
edition = "2018"

[profile.bench]
debug = true

[dependencies]
failure = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.13"
fnv = "1.0"

[dev-dependencies]
criterion = "0.2"
dinghy-test = "0.4"
rand = "0.7"
tempfile = "3"
clap = "2"

[[bench]]
name = "bench_parser"
harness = false

[[example]]
name = "interactive_parsing_cli"

[[example]]
name = "entity_parsing_from_scratch"
