[package]
name = "gazetteer-entity-parser"
version = "0.8.0"
authors = ["Alaa Saade <alaa.saade@snips.ai>"]
repository = "https://github.com/snipsco/gazetteer-entity-parser"
description = "Gazetteer-based entity parser"
edition = "2018"

[profile.bench]
debug = true

[dependencies]
failure = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
fnv = "1"

[dev-dependencies]
tempfile = "3"
